syntax = "proto3";

package graft_rpc;

option go_package = "./graft_rpc";

message AppendEntriesInput {
    int32 term = 1;
    string leaderId = 2;
    int32 prevLogIndex = 3;
    int32 prevLogTerm = 4;
    repeated string entries = 5;
    int32 leaderCommit = 6;
}

message AppendEntriesOutput {
    int32 term = 1;
    bool success = 2;
}

message RequestVoteInput {
    int32 term = 1;
    string candidateId = 2;
    int32 lastLogIndex = 3;
    int32 lastLogTerm = 4;
}

message RequestVoteOutput {
    int32 term = 1;
    bool voteGranted = 2;
}

service Rpc {
    rpc AppendEntries(AppendEntriesInput) returns (AppendEntriesOutput) {}
    rpc RequestVote(RequestVoteInput) returns (RequestVoteOutput) {}
}